[package]
name = "timeaway_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.214", features=["derive"]}
futures = "0.3.31"
tokio = {version = "1.41.1", features = ["full"]}
chrono = "0.4.38"
log = "0.4.22"
log4rs = "1.3.0"
serde_json = "1.0.132"
bson = "2.9.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "3.1.0"
