[package]
name = "timeaway_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features=["derive"]}
futures = "0.3.31"
tokio = {version = "1.45.1", features = ["full"]}
chrono = "0.4.41"
log = "0.4.27"
log4rs = "1.3.0"
serde_json = "1.0.140"
bson = "2.15.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "3.2.3"
