[package]
name = "timeaway_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features=["derive"]}
futures = "0.3.31"
tokio = {version = "1.48.0", features = ["full"]}
chrono = "0.4.42"
log = "0.4.28"
log4rs = "1.4.0"
serde_json = "1.0.145"
# bson = {version = "3.0.0", features = ["serde"]}
dotenv = "0.15.0"

[dependencies.mongodb]
version = "3.3.0"
